# serializer version: 1
# name: test_switches[switch.prana_recuperator_auto-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.prana_recuperator_auto',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto',
    'unique_id': 'ECC9FFE0E574_auto',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.prana_recuperator_auto-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'PRANA RECUPERATOR Auto',
    }),
    'context': <ANY>,
    'entity_id': 'switch.prana_recuperator_auto',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.prana_recuperator_auto_plus-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.prana_recuperator_auto_plus',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto plus',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto plus',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto_plus',
    'unique_id': 'ECC9FFE0E574_auto_plus',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.prana_recuperator_auto_plus-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'PRANA RECUPERATOR Auto plus',
    }),
    'context': <ANY>,
    'entity_id': 'switch.prana_recuperator_auto_plus',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.prana_recuperator_bound-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.prana_recuperator_bound',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bound',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bound',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bound',
    'unique_id': 'ECC9FFE0E574_bound',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.prana_recuperator_bound-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'PRANA RECUPERATOR Bound',
    }),
    'context': <ANY>,
    'entity_id': 'switch.prana_recuperator_bound',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.prana_recuperator_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.prana_recuperator_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heater',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heater',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heater',
    'unique_id': 'ECC9FFE0E574_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.prana_recuperator_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'PRANA RECUPERATOR Heater',
    }),
    'context': <ANY>,
    'entity_id': 'switch.prana_recuperator_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.prana_recuperator_winter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.prana_recuperator_winter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Winter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Winter',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'winter',
    'unique_id': 'ECC9FFE0E574_winter',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.prana_recuperator_winter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'PRANA RECUPERATOR Winter',
    }),
    'context': <ANY>,
    'entity_id': 'switch.prana_recuperator_winter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
